// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Props/min Implementation test 1`] = `
<div class="Source sb-unstyled ">
  <pre class="prismjs">
    <code class="language-jsx"
          style="white-space: pre;"
    >
      <span class="token keyword">
        import
      </span>
      <span class>
        React
      </span>
      <span class="token keyword">
        from
      </span>
      <span class>
      </span>
      <span class="token string">
        "react"
      </span>
      <span class="token punctuation">
        ;
      </span>
      <span class>
      </span>
      <span class>
      </span>
      <span class="token keyword">
        import
      </span>
      <span class>
        format
      </span>
      <span class="token keyword">
        from
      </span>
      <span class>
      </span>
      <span class="token string">
        "date-fns/format"
      </span>
      <span class="token punctuation">
        ;
      </span>
      <span class>
      </span>
      <span class>
      </span>
      <span class="token keyword">
        import
      </span>
      <span class>
        DateInput
      </span>
      <span class="token keyword">
        from
      </span>
      <span class>
      </span>
      <span class="token string">
        "@idesigncode/date-input/DateInput.mjs"
      </span>
      <span class="token punctuation">
        ;
      </span>
      <span class>
      </span>
      <span class>
      </span>
      <span class="token keyword">
        import
      </span>
      <span class>
      </span>
      <span class="token string">
        "@idesigncode/date-input/theme.css"
      </span>
      <span class="token punctuation">
        ;
      </span>
      <span class>
      </span>
      <span class>
      </span>
      <span class="token keyword">
        import
      </span>
      <span class>
      </span>
      <span class="token string">
        "@idesigncode/date-input/layout.css"
      </span>
      <span class="token punctuation">
        ;
      </span>
      <span class>
      </span>
      <span class>
      </span>
      <span class="token keyword">
        const
      </span>
      <span class>
      </span>
      <span class="token function-variable function">
        MinExample
      </span>
      <span class>
      </span>
      <span class="token operator">
        =
      </span>
      <span class>
      </span>
      <span class="token punctuation">
        (
      </span>
      <span class="token punctuation">
        )
      </span>
      <span class>
      </span>
      <span class="token operator">
        =&gt;
      </span>
      <span class>
      </span>
      <span class="token punctuation">
        {
      </span>
      <span class>
      </span>
      <span class>
      </span>
      <span class="token keyword">
        const
      </span>
      <span class>
      </span>
      <span class="token punctuation">
        [
      </span>
      <span class>
        value
      </span>
      <span class="token punctuation">
        ,
      </span>
      <span class>
        setValue
      </span>
      <span class="token punctuation">
        ]
      </span>
      <span class>
      </span>
      <span class="token operator">
        =
      </span>
      <span class>
        React
      </span>
      <span class="token punctuation">
        .
      </span>
      <span class="token function">
        useState
      </span>
      <span class="token punctuation">
        (
      </span>
      <span class="token string">
        ""
      </span>
      <span class="token punctuation">
        )
      </span>
      <span class="token punctuation">
        ;
      </span>
      <span class>
      </span>
      <span class>
      </span>
      <span class="token keyword">
        const
      </span>
      <span class>
      </span>
      <span class="token function-variable function">
        handleOnChange
      </span>
      <span class>
      </span>
      <span class="token operator">
        =
      </span>
      <span class>
      </span>
      <span class="token punctuation">
        (
      </span>
      <span class="token parameter">
        event
      </span>
      <span class="token parameter punctuation">
        ,
      </span>
      <span class="token parameter">
        formatValue
      </span>
      <span class="token punctuation">
        )
      </span>
      <span class>
      </span>
      <span class="token operator">
        =&gt;
      </span>
      <span class>
      </span>
      <span class="token punctuation">
        {
      </span>
      <span class>
      </span>
      <span class>
      </span>
      <span class="token function">
        setValue
      </span>
      <span class="token punctuation">
        (
      </span>
      <span class>
        formatValue
      </span>
      <span class="token punctuation">
        )
      </span>
      <span class="token punctuation">
        ;
      </span>
      <span class>
      </span>
      <span class>
      </span>
      <span class="token punctuation">
        }
      </span>
      <span class="token punctuation">
        ;
      </span>
      <span class>
      </span>
      <span class>
      </span>
      <span class="token keyword">
        return
      </span>
      <span class>
      </span>
      <span class="token punctuation">
        (
      </span>
      <span class>
      </span>
      <span class>
      </span>
      <span class="token tag punctuation">
        &lt;
      </span>
      <span class="token tag class-name">
        DateInput
      </span>
      <span class="token tag">
      </span>
      <span class="token tag">
      </span>
      <span class="token tag attr-name">
        min
      </span>
      <span class="token tag script language-javascript script-punctuation punctuation">
        =
      </span>
      <span class="token tag script language-javascript punctuation">
        {
      </span>
      <span class="token tag script language-javascript function">
        format
      </span>
      <span class="token tag script language-javascript punctuation">
        (
      </span>
      <span class="token tag script language-javascript keyword">
        new
      </span>
      <span class="token tag script language-javascript">
      </span>
      <span class="token tag script language-javascript class-name">
        Date
      </span>
      <span class="token tag script language-javascript punctuation">
        (
      </span>
      <span class="token tag script language-javascript punctuation">
        )
      </span>
      <span class="token tag script language-javascript punctuation">
        ,
      </span>
      <span class="token tag script language-javascript">
      </span>
      <span class="token tag script language-javascript string">
        "yyyy-MM-dd"
      </span>
      <span class="token tag script language-javascript punctuation">
        )
      </span>
      <span class="token tag script language-javascript punctuation">
        }
      </span>
      <span class="token tag">
      </span>
      <span class="token tag">
      </span>
      <span class="token tag attr-name">
        name
      </span>
      <span class="token tag attr-value punctuation attr-equals">
        =
      </span>
      <span class="token tag attr-value punctuation">
        "
      </span>
      <span class="token tag attr-value">
        field_name
      </span>
      <span class="token tag attr-value punctuation">
        "
      </span>
      <span class="token tag">
      </span>
      <span class="token tag">
      </span>
      <span class="token tag attr-name">
        onChange
      </span>
      <span class="token tag script language-javascript script-punctuation punctuation">
        =
      </span>
      <span class="token tag script language-javascript punctuation">
        {
      </span>
      <span class="token tag script language-javascript">
        handleOnChange
      </span>
      <span class="token tag script language-javascript punctuation">
        }
      </span>
      <span class="token tag">
      </span>
      <span class="token tag">
      </span>
      <span class="token tag attr-name">
        value
      </span>
      <span class="token tag script language-javascript script-punctuation punctuation">
        =
      </span>
      <span class="token tag script language-javascript punctuation">
        {
      </span>
      <span class="token tag script language-javascript">
        value
      </span>
      <span class="token tag script language-javascript punctuation">
        }
      </span>
      <span class="token tag">
      </span>
      <span class="token tag">
      </span>
      <span class="token tag punctuation">
        /&gt;
      </span>
      <span class>
      </span>
      <span class>
      </span>
      <span class="token punctuation">
        )
      </span>
      <span class="token punctuation">
        ;
      </span>
      <span class>
      </span>
      <span class>
      </span>
      <span class="token punctuation">
        }
      </span>
      <span class="token punctuation">
        ;
      </span>
      <span class>
      </span>
      <span class>
      </span>
      <span class="token keyword">
        export
      </span>
      <span class>
      </span>
      <span class="token keyword">
        default
      </span>
      <span class>
        MinExample
      </span>
      <span class="token punctuation">
        ;
      </span>
    </code>
  </pre>
  <button>
    Copy
  </button>
</div>
`;

exports[`Props/min Min In Future test 1`] = `
<div class="dateInput"
     data-testid="field_name-DateInput"
>
  <input aria-label="Date format: dd/mm/yyyy"
         class="field"
         data-testid="field_name"
         name="field_name"
         placeholder="dd/mm/yyyy"
         type="text"
         value
  >
  <button aria-label="Open calendar date picker"
          class="openCalendarButton"
          data-testid="field_name-OpenCalendarButton"
          type="button"
  >
    <svg class="iconCalendar"
         data-testid="field_name-Icon"
         xmlns="http://www.w3.org/2000/svg"
         version="1.1"
         x="0px"
         y="0px"
         viewbox="131 -131 512 512"
         xml:space="preserve"
    >
      <g>
        <path d="M186.6,343.9h400.8V51.7H186.6V343.9z M296.1-2.6v-81.9c0-2.6-0.9-5.2-2.6-6.9s-4.3-2.6-6.9-2.6h-18.1   c-2.6,0-5.2,0.9-6.9,2.6c-1.7,1.7-2.6,4.3-2.6,6.9v81.9c0,2.6,0.9,5.2,2.6,6.9c1.7,1.7,4.3,2.6,6.9,2.6h18.1c2.6,0,5.2-0.9,6.9-2.6   C295.2,2.6,296.1,0,296.1-2.6z M515-2.6v-81.9c0-2.6-0.9-5.2-2.6-6.9c-1.7-1.7-4.3-2.6-6.9-2.6h-18.1c-2.6,0-5.2,0.9-6.9,2.6   c-1.7,1.7-2.6,4.3-2.6,6.9v81.9c0,2.6,0.9,5.2,2.6,6.9s4.3,2.6,6.9,2.6h18.1c2.6,0,5.2-0.9,6.9-2.6C514.1,2.6,515,0,515-2.6z    M624.5-20.7v364.6c0,9.5-3.4,18.1-11.2,25.9S597.7,381,587.4,381H186.6c-9.5,0-18.1-3.4-25.9-11.2c-6.9-6.9-11.2-15.5-11.2-25.9   V-20.7c0-9.5,3.4-18.1,11.2-25.9c6.9-6.9,15.5-11.2,25.9-11.2h37.1v-27.5c0-12.9,4.3-23.3,13.8-31.9c8.6-8.6,19.8-13.8,31.8-13.8   h18.1c12.9,0,23.3,4.3,31.9,13.8c8.6,8.6,13.8,19.8,13.8,31.9v27.6h109.5v-27.6c0-12.9,4.3-23.3,13.8-31.9   c8.6-8.6,19.8-13.8,31.9-13.8h18.1c12.9,0,23.3,4.3,31.9,13.8c8.6,8.6,13.8,19.8,13.8,31.9v27.6h36.2c9.5,0,18.1,3.4,25.9,11.2   C621-39.6,624.5-31,624.5-20.7z">
        </path>
      </g>
    </svg>
  </button>
  <dialog class="calendar"
          data-testid="field_name-Calendar"
          open
  >
    <svg class="calendarArrow"
         data-testid="field_name-CalendarArrow"
         viewbox="0 0 20 9"
         xmlns="http://www.w3.org/2000/svg"
         fill="currentcolor"
    >
      <polyline class="selected"
                points="0,10 10,0 20,10"
                fill="none"
                stroke-width="1"
      >
      </polyline>
    </svg>
    <div class="calendarTabs"
         data-testid="field_name-CalendarTabs"
         role="tablist"
    >
      <button aria-selected="true"
              data-testid="field_name-Tab-Day"
              disabled
              id="field_name-Tab-Day"
              role="tab"
              type="button"
      >
        <span>
          day
        </span>
      </button>
      <button data-testid="field_name-Tab-Month"
              id="field_name-Tab-Month"
              role="tab"
              type="button"
      >
        <span>
          month
        </span>
      </button>
      <button data-testid="field_name-Tab-Year"
              id="field_name-Tab-Year"
              role="tab"
              type="button"
      >
        <span>
          year
        </span>
      </button>
    </div>
    <div aria-labelledby="field_name-Tab-Day"
         class="view"
         data-testid="field_name-View"
         role="tabpanel"
    >
      <div class="viewHead"
           data-testid="field_name-ViewHead"
      >
        <div class="dateRange Day">
          <button data-testid="field_name-Calendar-Day-ButtonPrevious"
                  aria-hidden="true"
                  class="arrowButton previous"
                  disabled
                  type="button"
          >
            <span>
              View day options in May
            </span>
          </button>
          <span data-testid="field_name-Calendar-Day-Range"
                class="dateRangeText"
          >
            Jun
          </span>
          <button data-testid="field_name-Calendar-Day-ButtonNext"
                  class="arrowButton next"
                  type="button"
          >
            <span>
              View day options in Jul
            </span>
          </button>
        </div>
        <button aria-label="Change year"
                class="dateRangeYear Day"
                data-testid="field_name-DateRangeYear"
                type="button"
        >
          2033
        </button>
      </div>
      <div class="viewBody Day"
           data-testid="field_name-ViewBody"
      >
        <div class="viewWeekDays"
             data-testid="field_name-Calendar-Day-WeekDay-1"
        >
          Mon
        </div>
        <div class="viewWeekDays"
             data-testid="field_name-Calendar-Day-WeekDay-2"
        >
          Tue
        </div>
        <div class="viewWeekDays"
             data-testid="field_name-Calendar-Day-WeekDay-3"
        >
          Wed
        </div>
        <div class="viewWeekDays"
             data-testid="field_name-Calendar-Day-WeekDay-4"
        >
          Thu
        </div>
        <div class="viewWeekDays"
             data-testid="field_name-Calendar-Day-WeekDay-5"
        >
          Fri
        </div>
        <div class="viewWeekDays"
             data-testid="field_name-Calendar-Day-WeekDay-6"
        >
          Sat
        </div>
        <div class="viewWeekDays"
             data-testid="field_name-Calendar-Day-WeekDay-7"
        >
          Sun
        </div>
        <button aria-hidden="true"
                aria-label="30 May 2033"
                class="dateOption Day"
                data-testid="field_name-Calendar-Day-2033-05-30"
                disabled
                type="button"
        >
          30
        </button>
        <button aria-hidden="true"
                aria-label="31 May 2033"
                class="dateOption Day"
                data-testid="field_name-Calendar-Day-2033-05-31"
                disabled
                type="button"
        >
          31
        </button>
        <button aria-label="1 June 2033"
                class="dateOption Day"
                data-testid="field_name-Calendar-Day-2033-06-01"
                disabled
                type="button"
        >
          1
        </button>
        <button aria-label="2 June 2033"
                class="dateOption Day"
                data-testid="field_name-Calendar-Day-2033-06-02"
                type="button"
        >
          2
        </button>
        <button aria-label="3 June 2033"
                class="dateOption Day"
                data-testid="field_name-Calendar-Day-2033-06-03"
                type="button"
        >
          3
        </button>
        <button aria-label="4 June 2033"
                class="dateOption Day"
                data-testid="field_name-Calendar-Day-2033-06-04"
                type="button"
        >
          4
        </button>
        <button aria-label="5 June 2033"
                class="dateOption Day"
                data-testid="field_name-Calendar-Day-2033-06-05"
                type="button"
        >
          5
        </button>
        <button aria-label="6 June 2033"
                class="dateOption Day"
                data-testid="field_name-Calendar-Day-2033-06-06"
                type="button"
        >
          6
        </button>
        <button aria-label="7 June 2033"
                class="dateOption Day"
                data-testid="field_name-Calendar-Day-2033-06-07"
                type="button"
        >
          7
        </button>
        <button aria-label="8 June 2033"
                class="dateOption Day"
                data-testid="field_name-Calendar-Day-2033-06-08"
                type="button"
        >
          8
        </button>
        <button aria-label="9 June 2033"
                class="dateOption Day"
                data-testid="field_name-Calendar-Day-2033-06-09"
                type="button"
        >
          9
        </button>
        <button aria-label="10 June 2033"
                class="dateOption Day"
                data-testid="field_name-Calendar-Day-2033-06-10"
                type="button"
        >
          10
        </button>
        <button aria-label="11 June 2033"
                class="dateOption Day"
                data-testid="field_name-Calendar-Day-2033-06-11"
                type="button"
        >
          11
        </button>
        <button aria-label="12 June 2033"
                class="dateOption Day"
                data-testid="field_name-Calendar-Day-2033-06-12"
                type="button"
        >
          12
        </button>
        <button aria-label="13 June 2033"
                class="dateOption Day"
                data-testid="field_name-Calendar-Day-2033-06-13"
                type="button"
        >
          13
        </button>
        <button aria-label="14 June 2033"
                class="dateOption Day"
                data-testid="field_name-Calendar-Day-2033-06-14"
                type="button"
        >
          14
        </button>
        <button aria-label="15 June 2033"
                class="dateOption Day"
                data-testid="field_name-Calendar-Day-2033-06-15"
                type="button"
        >
          15
        </button>
        <button aria-label="16 June 2033"
                class="dateOption Day"
                data-testid="field_name-Calendar-Day-2033-06-16"
                type="button"
        >
          16
        </button>
        <button aria-label="17 June 2033"
                class="dateOption Day"
                data-testid="field_name-Calendar-Day-2033-06-17"
                type="button"
        >
          17
        </button>
        <button aria-label="18 June 2033"
                class="dateOption Day"
                data-testid="field_name-Calendar-Day-2033-06-18"
                type="button"
        >
          18
        </button>
        <button aria-label="19 June 2033"
                class="dateOption Day"
                data-testid="field_name-Calendar-Day-2033-06-19"
                type="button"
        >
          19
        </button>
        <button aria-label="20 June 2033"
                class="dateOption Day"
                data-testid="field_name-Calendar-Day-2033-06-20"
                type="button"
        >
          20
        </button>
        <button aria-label="21 June 2033"
                class="dateOption Day"
                data-testid="field_name-Calendar-Day-2033-06-21"
                type="button"
        >
          21
        </button>
        <button aria-label="22 June 2033"
                class="dateOption Day"
                data-testid="field_name-Calendar-Day-2033-06-22"
                type="button"
        >
          22
        </button>
        <button aria-label="23 June 2033"
                class="dateOption Day"
                data-testid="field_name-Calendar-Day-2033-06-23"
                type="button"
        >
          23
        </button>
        <button aria-label="24 June 2033"
                class="dateOption Day"
                data-testid="field_name-Calendar-Day-2033-06-24"
                type="button"
        >
          24
        </button>
        <button aria-label="25 June 2033"
                class="dateOption Day"
                data-testid="field_name-Calendar-Day-2033-06-25"
                type="button"
        >
          25
        </button>
        <button aria-label="26 June 2033"
                class="dateOption Day"
                data-testid="field_name-Calendar-Day-2033-06-26"
                type="button"
        >
          26
        </button>
        <button aria-label="27 June 2033"
                class="dateOption Day"
                data-testid="field_name-Calendar-Day-2033-06-27"
                type="button"
        >
          27
        </button>
        <button aria-label="28 June 2033"
                class="dateOption Day"
                data-testid="field_name-Calendar-Day-2033-06-28"
                type="button"
        >
          28
        </button>
        <button aria-label="29 June 2033"
                class="dateOption Day"
                data-testid="field_name-Calendar-Day-2033-06-29"
                type="button"
        >
          29
        </button>
        <button aria-label="30 June 2033"
                class="dateOption Day"
                data-testid="field_name-Calendar-Day-2033-06-30"
                type="button"
        >
          30
        </button>
        <button aria-hidden="true"
                aria-label="1 July 2033"
                class="dateOption Day"
                data-testid="field_name-Calendar-Day-2033-07-01"
                disabled
                type="button"
        >
          1
        </button>
        <button aria-hidden="true"
                aria-label="2 July 2033"
                class="dateOption Day"
                data-testid="field_name-Calendar-Day-2033-07-02"
                disabled
                type="button"
        >
          2
        </button>
        <button aria-hidden="true"
                aria-label="3 July 2033"
                class="dateOption Day"
                data-testid="field_name-Calendar-Day-2033-07-03"
                disabled
                type="button"
        >
          3
        </button>
      </div>
    </div>
  </dialog>
</div>
`;

exports[`Props/min Min In Past test 1`] = `
<div class="dateInput"
     data-testid="field_name-DateInput"
>
  <input aria-label="Date format: dd/mm/yyyy"
         class="field"
         data-testid="field_name"
         name="field_name"
         placeholder="dd/mm/yyyy"
         type="text"
         value
  >
  <button aria-label="Open calendar date picker"
          class="openCalendarButton"
          data-testid="field_name-OpenCalendarButton"
          type="button"
  >
    <svg class="iconCalendar"
         data-testid="field_name-Icon"
         xmlns="http://www.w3.org/2000/svg"
         version="1.1"
         x="0px"
         y="0px"
         viewbox="131 -131 512 512"
         xml:space="preserve"
    >
      <g>
        <path d="M186.6,343.9h400.8V51.7H186.6V343.9z M296.1-2.6v-81.9c0-2.6-0.9-5.2-2.6-6.9s-4.3-2.6-6.9-2.6h-18.1   c-2.6,0-5.2,0.9-6.9,2.6c-1.7,1.7-2.6,4.3-2.6,6.9v81.9c0,2.6,0.9,5.2,2.6,6.9c1.7,1.7,4.3,2.6,6.9,2.6h18.1c2.6,0,5.2-0.9,6.9-2.6   C295.2,2.6,296.1,0,296.1-2.6z M515-2.6v-81.9c0-2.6-0.9-5.2-2.6-6.9c-1.7-1.7-4.3-2.6-6.9-2.6h-18.1c-2.6,0-5.2,0.9-6.9,2.6   c-1.7,1.7-2.6,4.3-2.6,6.9v81.9c0,2.6,0.9,5.2,2.6,6.9s4.3,2.6,6.9,2.6h18.1c2.6,0,5.2-0.9,6.9-2.6C514.1,2.6,515,0,515-2.6z    M624.5-20.7v364.6c0,9.5-3.4,18.1-11.2,25.9S597.7,381,587.4,381H186.6c-9.5,0-18.1-3.4-25.9-11.2c-6.9-6.9-11.2-15.5-11.2-25.9   V-20.7c0-9.5,3.4-18.1,11.2-25.9c6.9-6.9,15.5-11.2,25.9-11.2h37.1v-27.5c0-12.9,4.3-23.3,13.8-31.9c8.6-8.6,19.8-13.8,31.8-13.8   h18.1c12.9,0,23.3,4.3,31.9,13.8c8.6,8.6,13.8,19.8,13.8,31.9v27.6h109.5v-27.6c0-12.9,4.3-23.3,13.8-31.9   c8.6-8.6,19.8-13.8,31.9-13.8h18.1c12.9,0,23.3,4.3,31.9,13.8c8.6,8.6,13.8,19.8,13.8,31.9v27.6h36.2c9.5,0,18.1,3.4,25.9,11.2   C621-39.6,624.5-31,624.5-20.7z">
        </path>
      </g>
    </svg>
  </button>
  <dialog class="calendar"
          data-testid="field_name-Calendar"
          open
  >
    <svg class="calendarArrow"
         data-testid="field_name-CalendarArrow"
         viewbox="0 0 20 9"
         xmlns="http://www.w3.org/2000/svg"
         fill="currentcolor"
    >
      <polyline class="selected"
                points="0,10 10,0 20,10"
                fill="none"
                stroke-width="1"
      >
      </polyline>
    </svg>
    <div class="calendarTabs"
         data-testid="field_name-CalendarTabs"
         role="tablist"
    >
      <button aria-selected="true"
              data-testid="field_name-Tab-Day"
              disabled
              id="field_name-Tab-Day"
              role="tab"
              type="button"
      >
        <span>
          day
        </span>
      </button>
      <button data-testid="field_name-Tab-Month"
              id="field_name-Tab-Month"
              role="tab"
              type="button"
      >
        <span>
          month
        </span>
      </button>
      <button data-testid="field_name-Tab-Year"
              id="field_name-Tab-Year"
              role="tab"
              type="button"
      >
        <span>
          year
        </span>
      </button>
    </div>
    <div aria-labelledby="field_name-Tab-Day"
         class="view"
         data-testid="field_name-View"
         role="tabpanel"
    >
      <div class="viewHead"
           data-testid="field_name-ViewHead"
      >
        <div class="dateRange Day">
          <button data-testid="field_name-Calendar-Day-ButtonPrevious"
                  class="arrowButton previous"
                  type="button"
          >
            <span>
              View day options in May
            </span>
          </button>
          <span data-testid="field_name-Calendar-Day-Range"
                class="dateRangeText"
          >
            Jun
          </span>
          <button data-testid="field_name-Calendar-Day-ButtonNext"
                  class="arrowButton next"
                  type="button"
          >
            <span>
              View day options in Jul
            </span>
          </button>
        </div>
        <button aria-label="Change year"
                class="dateRangeYear Day"
                data-testid="field_name-DateRangeYear"
                type="button"
        >
          2023
        </button>
      </div>
      <div class="viewBody Day"
           data-testid="field_name-ViewBody"
      >
        <div class="viewWeekDays"
             data-testid="field_name-Calendar-Day-WeekDay-1"
        >
          Mon
        </div>
        <div class="viewWeekDays"
             data-testid="field_name-Calendar-Day-WeekDay-2"
        >
          Tue
        </div>
        <div class="viewWeekDays"
             data-testid="field_name-Calendar-Day-WeekDay-3"
        >
          Wed
        </div>
        <div class="viewWeekDays"
             data-testid="field_name-Calendar-Day-WeekDay-4"
        >
          Thu
        </div>
        <div class="viewWeekDays"
             data-testid="field_name-Calendar-Day-WeekDay-5"
        >
          Fri
        </div>
        <div class="viewWeekDays"
             data-testid="field_name-Calendar-Day-WeekDay-6"
        >
          Sat
        </div>
        <div class="viewWeekDays"
             data-testid="field_name-Calendar-Day-WeekDay-7"
        >
          Sun
        </div>
        <button aria-hidden="true"
                aria-label="29 May 2023"
                class="dateOption Day"
                data-testid="field_name-Calendar-Day-2023-05-29"
                disabled
                type="button"
        >
          29
        </button>
        <button aria-hidden="true"
                aria-label="30 May 2023"
                class="dateOption Day"
                data-testid="field_name-Calendar-Day-2023-05-30"
                disabled
                type="button"
        >
          30
        </button>
        <button aria-hidden="true"
                aria-label="31 May 2023"
                class="dateOption Day"
                data-testid="field_name-Calendar-Day-2023-05-31"
                disabled
                type="button"
        >
          31
        </button>
        <button aria-label="1 June 2023"
                class="dateOption Day"
                data-testid="field_name-Calendar-Day-2023-06-01"
                type="button"
        >
          1
        </button>
        <button aria-current="date"
                aria-label="2 June 2023"
                class="dateOption Day"
                data-testid="field_name-Calendar-Day-2023-06-02"
                type="button"
        >
          2
        </button>
        <button aria-label="3 June 2023"
                class="dateOption Day"
                data-testid="field_name-Calendar-Day-2023-06-03"
                type="button"
        >
          3
        </button>
        <button aria-label="4 June 2023"
                class="dateOption Day"
                data-testid="field_name-Calendar-Day-2023-06-04"
                type="button"
        >
          4
        </button>
        <button aria-label="5 June 2023"
                class="dateOption Day"
                data-testid="field_name-Calendar-Day-2023-06-05"
                type="button"
        >
          5
        </button>
        <button aria-label="6 June 2023"
                class="dateOption Day"
                data-testid="field_name-Calendar-Day-2023-06-06"
                type="button"
        >
          6
        </button>
        <button aria-label="7 June 2023"
                class="dateOption Day"
                data-testid="field_name-Calendar-Day-2023-06-07"
                type="button"
        >
          7
        </button>
        <button aria-label="8 June 2023"
                class="dateOption Day"
                data-testid="field_name-Calendar-Day-2023-06-08"
                type="button"
        >
          8
        </button>
        <button aria-label="9 June 2023"
                class="dateOption Day"
                data-testid="field_name-Calendar-Day-2023-06-09"
                type="button"
        >
          9
        </button>
        <button aria-label="10 June 2023"
                class="dateOption Day"
                data-testid="field_name-Calendar-Day-2023-06-10"
                type="button"
        >
          10
        </button>
        <button aria-label="11 June 2023"
                class="dateOption Day"
                data-testid="field_name-Calendar-Day-2023-06-11"
                type="button"
        >
          11
        </button>
        <button aria-label="12 June 2023"
                class="dateOption Day"
                data-testid="field_name-Calendar-Day-2023-06-12"
                type="button"
        >
          12
        </button>
        <button aria-label="13 June 2023"
                class="dateOption Day"
                data-testid="field_name-Calendar-Day-2023-06-13"
                type="button"
        >
          13
        </button>
        <button aria-label="14 June 2023"
                class="dateOption Day"
                data-testid="field_name-Calendar-Day-2023-06-14"
                type="button"
        >
          14
        </button>
        <button aria-label="15 June 2023"
                class="dateOption Day"
                data-testid="field_name-Calendar-Day-2023-06-15"
                type="button"
        >
          15
        </button>
        <button aria-label="16 June 2023"
                class="dateOption Day"
                data-testid="field_name-Calendar-Day-2023-06-16"
                type="button"
        >
          16
        </button>
        <button aria-label="17 June 2023"
                class="dateOption Day"
                data-testid="field_name-Calendar-Day-2023-06-17"
                type="button"
        >
          17
        </button>
        <button aria-label="18 June 2023"
                class="dateOption Day"
                data-testid="field_name-Calendar-Day-2023-06-18"
                type="button"
        >
          18
        </button>
        <button aria-label="19 June 2023"
                class="dateOption Day"
                data-testid="field_name-Calendar-Day-2023-06-19"
                type="button"
        >
          19
        </button>
        <button aria-label="20 June 2023"
                class="dateOption Day"
                data-testid="field_name-Calendar-Day-2023-06-20"
                type="button"
        >
          20
        </button>
        <button aria-label="21 June 2023"
                class="dateOption Day"
                data-testid="field_name-Calendar-Day-2023-06-21"
                type="button"
        >
          21
        </button>
        <button aria-label="22 June 2023"
                class="dateOption Day"
                data-testid="field_name-Calendar-Day-2023-06-22"
                type="button"
        >
          22
        </button>
        <button aria-label="23 June 2023"
                class="dateOption Day"
                data-testid="field_name-Calendar-Day-2023-06-23"
                type="button"
        >
          23
        </button>
        <button aria-label="24 June 2023"
                class="dateOption Day"
                data-testid="field_name-Calendar-Day-2023-06-24"
                type="button"
        >
          24
        </button>
        <button aria-label="25 June 2023"
                class="dateOption Day"
                data-testid="field_name-Calendar-Day-2023-06-25"
                type="button"
        >
          25
        </button>
        <button aria-label="26 June 2023"
                class="dateOption Day"
                data-testid="field_name-Calendar-Day-2023-06-26"
                type="button"
        >
          26
        </button>
        <button aria-label="27 June 2023"
                class="dateOption Day"
                data-testid="field_name-Calendar-Day-2023-06-27"
                type="button"
        >
          27
        </button>
        <button aria-label="28 June 2023"
                class="dateOption Day"
                data-testid="field_name-Calendar-Day-2023-06-28"
                type="button"
        >
          28
        </button>
        <button aria-label="29 June 2023"
                class="dateOption Day"
                data-testid="field_name-Calendar-Day-2023-06-29"
                type="button"
        >
          29
        </button>
        <button aria-label="30 June 2023"
                class="dateOption Day"
                data-testid="field_name-Calendar-Day-2023-06-30"
                type="button"
        >
          30
        </button>
        <button aria-hidden="true"
                aria-label="1 July 2023"
                class="dateOption Day"
                data-testid="field_name-Calendar-Day-2023-07-01"
                disabled
                type="button"
        >
          1
        </button>
        <button aria-hidden="true"
                aria-label="2 July 2023"
                class="dateOption Day"
                data-testid="field_name-Calendar-Day-2023-07-02"
                disabled
                type="button"
        >
          2
        </button>
      </div>
    </div>
  </dialog>
</div>
`;

exports[`Props/min Min Is After Max test 1`] = `
<div class="dateInput"
     data-testid="field_name-DateInput"
>
  <input aria-label="Date format: dd/mm/yyyy"
         class="field"
         data-testid="field_name"
         name="field_name"
         placeholder="dd/mm/yyyy"
         type="text"
         value
  >
  <button aria-label="Open calendar date picker"
          class="openCalendarButton"
          data-testid="field_name-OpenCalendarButton"
          type="button"
  >
    <svg class="iconCalendar"
         data-testid="field_name-Icon"
         xmlns="http://www.w3.org/2000/svg"
         version="1.1"
         x="0px"
         y="0px"
         viewbox="131 -131 512 512"
         xml:space="preserve"
    >
      <g>
        <path d="M186.6,343.9h400.8V51.7H186.6V343.9z M296.1-2.6v-81.9c0-2.6-0.9-5.2-2.6-6.9s-4.3-2.6-6.9-2.6h-18.1   c-2.6,0-5.2,0.9-6.9,2.6c-1.7,1.7-2.6,4.3-2.6,6.9v81.9c0,2.6,0.9,5.2,2.6,6.9c1.7,1.7,4.3,2.6,6.9,2.6h18.1c2.6,0,5.2-0.9,6.9-2.6   C295.2,2.6,296.1,0,296.1-2.6z M515-2.6v-81.9c0-2.6-0.9-5.2-2.6-6.9c-1.7-1.7-4.3-2.6-6.9-2.6h-18.1c-2.6,0-5.2,0.9-6.9,2.6   c-1.7,1.7-2.6,4.3-2.6,6.9v81.9c0,2.6,0.9,5.2,2.6,6.9s4.3,2.6,6.9,2.6h18.1c2.6,0,5.2-0.9,6.9-2.6C514.1,2.6,515,0,515-2.6z    M624.5-20.7v364.6c0,9.5-3.4,18.1-11.2,25.9S597.7,381,587.4,381H186.6c-9.5,0-18.1-3.4-25.9-11.2c-6.9-6.9-11.2-15.5-11.2-25.9   V-20.7c0-9.5,3.4-18.1,11.2-25.9c6.9-6.9,15.5-11.2,25.9-11.2h37.1v-27.5c0-12.9,4.3-23.3,13.8-31.9c8.6-8.6,19.8-13.8,31.8-13.8   h18.1c12.9,0,23.3,4.3,31.9,13.8c8.6,8.6,13.8,19.8,13.8,31.9v27.6h109.5v-27.6c0-12.9,4.3-23.3,13.8-31.9   c8.6-8.6,19.8-13.8,31.9-13.8h18.1c12.9,0,23.3,4.3,31.9,13.8c8.6,8.6,13.8,19.8,13.8,31.9v27.6h36.2c9.5,0,18.1,3.4,25.9,11.2   C621-39.6,624.5-31,624.5-20.7z">
        </path>
      </g>
    </svg>
  </button>
  <dialog class="calendar"
          data-testid="field_name-Calendar"
          open
  >
    <svg class="calendarArrow"
         data-testid="field_name-CalendarArrow"
         viewbox="0 0 20 9"
         xmlns="http://www.w3.org/2000/svg"
         fill="currentcolor"
    >
      <polyline class="selected"
                points="0,10 10,0 20,10"
                fill="none"
                stroke-width="1"
      >
      </polyline>
    </svg>
    <div class="calendarTabs"
         data-testid="field_name-CalendarTabs"
         role="tablist"
    >
      <button aria-selected="true"
              data-testid="field_name-Tab-Day"
              disabled
              id="field_name-Tab-Day"
              role="tab"
              type="button"
      >
        <span>
          day
        </span>
      </button>
      <button data-testid="field_name-Tab-Month"
              id="field_name-Tab-Month"
              role="tab"
              type="button"
      >
        <span>
          month
        </span>
      </button>
      <button data-testid="field_name-Tab-Year"
              id="field_name-Tab-Year"
              role="tab"
              type="button"
      >
        <span>
          year
        </span>
      </button>
    </div>
    <div aria-labelledby="field_name-Tab-Day"
         class="view"
         data-testid="field_name-View"
         role="tabpanel"
    >
      <div class="viewHead"
           data-testid="field_name-ViewHead"
      >
        <div class="dateRange Day">
          <button data-testid="field_name-Calendar-Day-ButtonPrevious"
                  class="arrowButton previous"
                  type="button"
          >
            <span>
              View day options in May
            </span>
          </button>
          <span data-testid="field_name-Calendar-Day-Range"
                class="dateRangeText"
          >
            Jun
          </span>
          <button data-testid="field_name-Calendar-Day-ButtonNext"
                  class="arrowButton next"
                  type="button"
          >
            <span>
              View day options in Jul
            </span>
          </button>
        </div>
        <button aria-label="Change year"
                class="dateRangeYear Day"
                data-testid="field_name-DateRangeYear"
                type="button"
        >
          2023
        </button>
      </div>
      <div class="viewBody Day"
           data-testid="field_name-ViewBody"
      >
        <div class="viewWeekDays"
             data-testid="field_name-Calendar-Day-WeekDay-1"
        >
          Mon
        </div>
        <div class="viewWeekDays"
             data-testid="field_name-Calendar-Day-WeekDay-2"
        >
          Tue
        </div>
        <div class="viewWeekDays"
             data-testid="field_name-Calendar-Day-WeekDay-3"
        >
          Wed
        </div>
        <div class="viewWeekDays"
             data-testid="field_name-Calendar-Day-WeekDay-4"
        >
          Thu
        </div>
        <div class="viewWeekDays"
             data-testid="field_name-Calendar-Day-WeekDay-5"
        >
          Fri
        </div>
        <div class="viewWeekDays"
             data-testid="field_name-Calendar-Day-WeekDay-6"
        >
          Sat
        </div>
        <div class="viewWeekDays"
             data-testid="field_name-Calendar-Day-WeekDay-7"
        >
          Sun
        </div>
        <button aria-hidden="true"
                aria-label="29 May 2023"
                class="dateOption Day"
                data-testid="field_name-Calendar-Day-2023-05-29"
                disabled
                type="button"
        >
          29
        </button>
        <button aria-hidden="true"
                aria-label="30 May 2023"
                class="dateOption Day"
                data-testid="field_name-Calendar-Day-2023-05-30"
                disabled
                type="button"
        >
          30
        </button>
        <button aria-hidden="true"
                aria-label="31 May 2023"
                class="dateOption Day"
                data-testid="field_name-Calendar-Day-2023-05-31"
                disabled
                type="button"
        >
          31
        </button>
        <button aria-label="1 June 2023"
                class="dateOption Day"
                data-testid="field_name-Calendar-Day-2023-06-01"
                type="button"
        >
          1
        </button>
        <button aria-current="date"
                aria-label="2 June 2023"
                class="dateOption Day"
                data-testid="field_name-Calendar-Day-2023-06-02"
                type="button"
        >
          2
        </button>
        <button aria-label="3 June 2023"
                class="dateOption Day"
                data-testid="field_name-Calendar-Day-2023-06-03"
                type="button"
        >
          3
        </button>
        <button aria-label="4 June 2023"
                class="dateOption Day"
                data-testid="field_name-Calendar-Day-2023-06-04"
                type="button"
        >
          4
        </button>
        <button aria-label="5 June 2023"
                class="dateOption Day"
                data-testid="field_name-Calendar-Day-2023-06-05"
                type="button"
        >
          5
        </button>
        <button aria-label="6 June 2023"
                class="dateOption Day"
                data-testid="field_name-Calendar-Day-2023-06-06"
                type="button"
        >
          6
        </button>
        <button aria-label="7 June 2023"
                class="dateOption Day"
                data-testid="field_name-Calendar-Day-2023-06-07"
                type="button"
        >
          7
        </button>
        <button aria-label="8 June 2023"
                class="dateOption Day"
                data-testid="field_name-Calendar-Day-2023-06-08"
                type="button"
        >
          8
        </button>
        <button aria-label="9 June 2023"
                class="dateOption Day"
                data-testid="field_name-Calendar-Day-2023-06-09"
                type="button"
        >
          9
        </button>
        <button aria-label="10 June 2023"
                class="dateOption Day"
                data-testid="field_name-Calendar-Day-2023-06-10"
                type="button"
        >
          10
        </button>
        <button aria-label="11 June 2023"
                class="dateOption Day"
                data-testid="field_name-Calendar-Day-2023-06-11"
                type="button"
        >
          11
        </button>
        <button aria-label="12 June 2023"
                class="dateOption Day"
                data-testid="field_name-Calendar-Day-2023-06-12"
                type="button"
        >
          12
        </button>
        <button aria-label="13 June 2023"
                class="dateOption Day"
                data-testid="field_name-Calendar-Day-2023-06-13"
                type="button"
        >
          13
        </button>
        <button aria-label="14 June 2023"
                class="dateOption Day"
                data-testid="field_name-Calendar-Day-2023-06-14"
                type="button"
        >
          14
        </button>
        <button aria-label="15 June 2023"
                class="dateOption Day"
                data-testid="field_name-Calendar-Day-2023-06-15"
                type="button"
        >
          15
        </button>
        <button aria-label="16 June 2023"
                class="dateOption Day"
                data-testid="field_name-Calendar-Day-2023-06-16"
                type="button"
        >
          16
        </button>
        <button aria-label="17 June 2023"
                class="dateOption Day"
                data-testid="field_name-Calendar-Day-2023-06-17"
                type="button"
        >
          17
        </button>
        <button aria-label="18 June 2023"
                class="dateOption Day"
                data-testid="field_name-Calendar-Day-2023-06-18"
                type="button"
        >
          18
        </button>
        <button aria-label="19 June 2023"
                class="dateOption Day"
                data-testid="field_name-Calendar-Day-2023-06-19"
                type="button"
        >
          19
        </button>
        <button aria-label="20 June 2023"
                class="dateOption Day"
                data-testid="field_name-Calendar-Day-2023-06-20"
                type="button"
        >
          20
        </button>
        <button aria-label="21 June 2023"
                class="dateOption Day"
                data-testid="field_name-Calendar-Day-2023-06-21"
                type="button"
        >
          21
        </button>
        <button aria-label="22 June 2023"
                class="dateOption Day"
                data-testid="field_name-Calendar-Day-2023-06-22"
                type="button"
        >
          22
        </button>
        <button aria-label="23 June 2023"
                class="dateOption Day"
                data-testid="field_name-Calendar-Day-2023-06-23"
                type="button"
        >
          23
        </button>
        <button aria-label="24 June 2023"
                class="dateOption Day"
                data-testid="field_name-Calendar-Day-2023-06-24"
                type="button"
        >
          24
        </button>
        <button aria-label="25 June 2023"
                class="dateOption Day"
                data-testid="field_name-Calendar-Day-2023-06-25"
                type="button"
        >
          25
        </button>
        <button aria-label="26 June 2023"
                class="dateOption Day"
                data-testid="field_name-Calendar-Day-2023-06-26"
                type="button"
        >
          26
        </button>
        <button aria-label="27 June 2023"
                class="dateOption Day"
                data-testid="field_name-Calendar-Day-2023-06-27"
                type="button"
        >
          27
        </button>
        <button aria-label="28 June 2023"
                class="dateOption Day"
                data-testid="field_name-Calendar-Day-2023-06-28"
                type="button"
        >
          28
        </button>
        <button aria-label="29 June 2023"
                class="dateOption Day"
                data-testid="field_name-Calendar-Day-2023-06-29"
                type="button"
        >
          29
        </button>
        <button aria-label="30 June 2023"
                class="dateOption Day"
                data-testid="field_name-Calendar-Day-2023-06-30"
                type="button"
        >
          30
        </button>
        <button aria-hidden="true"
                aria-label="1 July 2023"
                class="dateOption Day"
                data-testid="field_name-Calendar-Day-2023-07-01"
                disabled
                type="button"
        >
          1
        </button>
        <button aria-hidden="true"
                aria-label="2 July 2023"
                class="dateOption Day"
                data-testid="field_name-Calendar-Day-2023-07-02"
                disabled
                type="button"
        >
          2
        </button>
      </div>
    </div>
  </dialog>
</div>
`;

exports[`Props/min Typed Value Is Before Min test 1`] = `
<div class="dateInput"
     data-testid="field_name-DateInput"
>
  <input aria-label="Date format: dd/mm/yyyy"
         class="field"
         data-testid="field_name"
         name="field_name"
         placeholder="dd/mm/yyyy"
         type="text"
         value="24/10/2000"
  >
  <button aria-label="Open calendar date picker"
          class="openCalendarButton"
          data-testid="field_name-OpenCalendarButton"
          type="button"
  >
    <svg class="iconCalendar"
         data-testid="field_name-Icon"
         xmlns="http://www.w3.org/2000/svg"
         version="1.1"
         x="0px"
         y="0px"
         viewbox="131 -131 512 512"
         xml:space="preserve"
    >
      <g>
        <path d="M186.6,343.9h400.8V51.7H186.6V343.9z M296.1-2.6v-81.9c0-2.6-0.9-5.2-2.6-6.9s-4.3-2.6-6.9-2.6h-18.1   c-2.6,0-5.2,0.9-6.9,2.6c-1.7,1.7-2.6,4.3-2.6,6.9v81.9c0,2.6,0.9,5.2,2.6,6.9c1.7,1.7,4.3,2.6,6.9,2.6h18.1c2.6,0,5.2-0.9,6.9-2.6   C295.2,2.6,296.1,0,296.1-2.6z M515-2.6v-81.9c0-2.6-0.9-5.2-2.6-6.9c-1.7-1.7-4.3-2.6-6.9-2.6h-18.1c-2.6,0-5.2,0.9-6.9,2.6   c-1.7,1.7-2.6,4.3-2.6,6.9v81.9c0,2.6,0.9,5.2,2.6,6.9s4.3,2.6,6.9,2.6h18.1c2.6,0,5.2-0.9,6.9-2.6C514.1,2.6,515,0,515-2.6z    M624.5-20.7v364.6c0,9.5-3.4,18.1-11.2,25.9S597.7,381,587.4,381H186.6c-9.5,0-18.1-3.4-25.9-11.2c-6.9-6.9-11.2-15.5-11.2-25.9   V-20.7c0-9.5,3.4-18.1,11.2-25.9c6.9-6.9,15.5-11.2,25.9-11.2h37.1v-27.5c0-12.9,4.3-23.3,13.8-31.9c8.6-8.6,19.8-13.8,31.8-13.8   h18.1c12.9,0,23.3,4.3,31.9,13.8c8.6,8.6,13.8,19.8,13.8,31.9v27.6h109.5v-27.6c0-12.9,4.3-23.3,13.8-31.9   c8.6-8.6,19.8-13.8,31.9-13.8h18.1c12.9,0,23.3,4.3,31.9,13.8c8.6,8.6,13.8,19.8,13.8,31.9v27.6h36.2c9.5,0,18.1,3.4,25.9,11.2   C621-39.6,624.5-31,624.5-20.7z">
        </path>
      </g>
    </svg>
  </button>
</div>
`;

exports[`Props/min Value Is After Min test 1`] = `
<div class="dateInput"
     data-testid="field_name-DateInput"
>
  <input aria-label="Date format: dd/mm/yyyy"
         class="field"
         data-testid="field_name"
         name="field_name"
         placeholder="dd/mm/yyyy"
         type="text"
         value="24/10/2050"
  >
  <button aria-label="Open calendar date picker"
          class="openCalendarButton"
          data-testid="field_name-OpenCalendarButton"
          type="button"
  >
    <svg class="iconCalendar"
         data-testid="field_name-Icon"
         xmlns="http://www.w3.org/2000/svg"
         version="1.1"
         x="0px"
         y="0px"
         viewbox="131 -131 512 512"
         xml:space="preserve"
    >
      <g>
        <path d="M186.6,343.9h400.8V51.7H186.6V343.9z M296.1-2.6v-81.9c0-2.6-0.9-5.2-2.6-6.9s-4.3-2.6-6.9-2.6h-18.1   c-2.6,0-5.2,0.9-6.9,2.6c-1.7,1.7-2.6,4.3-2.6,6.9v81.9c0,2.6,0.9,5.2,2.6,6.9c1.7,1.7,4.3,2.6,6.9,2.6h18.1c2.6,0,5.2-0.9,6.9-2.6   C295.2,2.6,296.1,0,296.1-2.6z M515-2.6v-81.9c0-2.6-0.9-5.2-2.6-6.9c-1.7-1.7-4.3-2.6-6.9-2.6h-18.1c-2.6,0-5.2,0.9-6.9,2.6   c-1.7,1.7-2.6,4.3-2.6,6.9v81.9c0,2.6,0.9,5.2,2.6,6.9s4.3,2.6,6.9,2.6h18.1c2.6,0,5.2-0.9,6.9-2.6C514.1,2.6,515,0,515-2.6z    M624.5-20.7v364.6c0,9.5-3.4,18.1-11.2,25.9S597.7,381,587.4,381H186.6c-9.5,0-18.1-3.4-25.9-11.2c-6.9-6.9-11.2-15.5-11.2-25.9   V-20.7c0-9.5,3.4-18.1,11.2-25.9c6.9-6.9,15.5-11.2,25.9-11.2h37.1v-27.5c0-12.9,4.3-23.3,13.8-31.9c8.6-8.6,19.8-13.8,31.8-13.8   h18.1c12.9,0,23.3,4.3,31.9,13.8c8.6,8.6,13.8,19.8,13.8,31.9v27.6h109.5v-27.6c0-12.9,4.3-23.3,13.8-31.9   c8.6-8.6,19.8-13.8,31.9-13.8h18.1c12.9,0,23.3,4.3,31.9,13.8c8.6,8.6,13.8,19.8,13.8,31.9v27.6h36.2c9.5,0,18.1,3.4,25.9,11.2   C621-39.6,624.5-31,624.5-20.7z">
        </path>
      </g>
    </svg>
  </button>
  <dialog class="calendar"
          data-testid="field_name-Calendar"
          open
  >
    <svg class="calendarArrow"
         data-testid="field_name-CalendarArrow"
         viewbox="0 0 20 9"
         xmlns="http://www.w3.org/2000/svg"
         fill="currentcolor"
    >
      <polyline class
                points="0,10 10,0 20,10"
                fill="none"
                stroke-width="1"
      >
      </polyline>
    </svg>
    <div class="calendarTabs"
         data-testid="field_name-CalendarTabs"
         role="tablist"
    >
      <button data-testid="field_name-Tab-Day"
              id="field_name-Tab-Day"
              role="tab"
              type="button"
      >
        <span>
          day
        </span>
      </button>
      <button data-testid="field_name-Tab-Month"
              id="field_name-Tab-Month"
              role="tab"
              type="button"
      >
        <span>
          month
        </span>
      </button>
      <button data-testid="field_name-Tab-Year"
              id="field_name-Tab-Year"
              role="tab"
              type="button"
              aria-selected="true"
              disabled
      >
        <span>
          year
        </span>
      </button>
    </div>
    <div aria-labelledby="field_name-Tab-Year"
         class="view"
         data-testid="field_name-View"
         role="tabpanel"
    >
      <div class="viewHead"
           data-testid="field_name-ViewHead"
      >
        <div class="dateRange Year">
          <button data-testid="field_name-Calendar-Year-ButtonPrevious"
                  class="arrowButton previous"
                  type="button"
          >
            <span>
              View year options in 2000 - 2019
            </span>
          </button>
          <span data-testid="field_name-Calendar-Year-Range"
                class="dateRangeText"
          >
            2020 - 2039
          </span>
          <button data-testid="field_name-Calendar-Year-ButtonNext"
                  class="arrowButton next"
                  type="button"
          >
            <span>
              View year options in 2040 - 2059
            </span>
          </button>
        </div>
      </div>
      <div class="viewBody Year"
           data-testid="field_name-ViewBody"
      >
        <button aria-label="2020"
                class="dateOption Year"
                data-testid="field_name-Calendar-Year-2020"
                type="button"
        >
          2020
        </button>
        <button aria-label="2021"
                class="dateOption Year"
                data-testid="field_name-Calendar-Year-2021"
                type="button"
        >
          2021
        </button>
        <button aria-label="2022"
                class="dateOption Year"
                data-testid="field_name-Calendar-Year-2022"
                type="button"
        >
          2022
        </button>
        <button aria-current="date"
                aria-label="2023"
                class="dateOption Year"
                data-testid="field_name-Calendar-Year-2023"
                type="button"
        >
          2023
        </button>
        <button aria-label="2024"
                class="dateOption Year"
                data-testid="field_name-Calendar-Year-2024"
                type="button"
        >
          2024
        </button>
        <button aria-label="2025"
                class="dateOption Year"
                data-testid="field_name-Calendar-Year-2025"
                type="button"
        >
          2025
        </button>
        <button aria-label="2026"
                class="dateOption Year"
                data-testid="field_name-Calendar-Year-2026"
                type="button"
        >
          2026
        </button>
        <button aria-label="2027"
                class="dateOption Year"
                data-testid="field_name-Calendar-Year-2027"
                type="button"
        >
          2027
        </button>
        <button aria-label="2028"
                class="dateOption Year"
                data-testid="field_name-Calendar-Year-2028"
                type="button"
        >
          2028
        </button>
        <button aria-label="2029"
                class="dateOption Year"
                data-testid="field_name-Calendar-Year-2029"
                type="button"
        >
          2029
        </button>
        <button aria-label="2030"
                class="dateOption Year"
                data-testid="field_name-Calendar-Year-2030"
                type="button"
        >
          2030
        </button>
        <button aria-label="2031"
                class="dateOption Year"
                data-testid="field_name-Calendar-Year-2031"
                type="button"
        >
          2031
        </button>
        <button aria-label="2032"
                class="dateOption Year"
                data-testid="field_name-Calendar-Year-2032"
                type="button"
        >
          2032
        </button>
        <button aria-label="2033"
                class="dateOption Year"
                data-testid="field_name-Calendar-Year-2033"
                type="button"
        >
          2033
        </button>
        <button aria-label="2034"
                class="dateOption Year"
                data-testid="field_name-Calendar-Year-2034"
                type="button"
        >
          2034
        </button>
        <button aria-label="2035"
                class="dateOption Year"
                data-testid="field_name-Calendar-Year-2035"
                type="button"
        >
          2035
        </button>
        <button aria-label="2036"
                class="dateOption Year"
                data-testid="field_name-Calendar-Year-2036"
                type="button"
        >
          2036
        </button>
        <button aria-label="2037"
                class="dateOption Year"
                data-testid="field_name-Calendar-Year-2037"
                type="button"
        >
          2037
        </button>
        <button aria-label="2038"
                class="dateOption Year"
                data-testid="field_name-Calendar-Year-2038"
                type="button"
        >
          2038
        </button>
        <button aria-label="2039"
                class="dateOption Year"
                data-testid="field_name-Calendar-Year-2039"
                type="button"
        >
          2039
        </button>
      </div>
    </div>
  </dialog>
</div>
`;

exports[`Props/min Value Is Before Min test 1`] = `
<div class="dateInput"
     data-testid="field_name-DateInput"
>
  <input aria-label="Date format: dd/mm/yyyy"
         class="field"
         data-testid="field_name"
         name="field_name"
         placeholder="dd/mm/yyyy"
         type="text"
         value="24/10/2000"
  >
  <button aria-label="Open calendar date picker"
          class="openCalendarButton"
          data-testid="field_name-OpenCalendarButton"
          type="button"
  >
    <svg class="iconCalendar"
         data-testid="field_name-Icon"
         xmlns="http://www.w3.org/2000/svg"
         version="1.1"
         x="0px"
         y="0px"
         viewbox="131 -131 512 512"
         xml:space="preserve"
    >
      <g>
        <path d="M186.6,343.9h400.8V51.7H186.6V343.9z M296.1-2.6v-81.9c0-2.6-0.9-5.2-2.6-6.9s-4.3-2.6-6.9-2.6h-18.1   c-2.6,0-5.2,0.9-6.9,2.6c-1.7,1.7-2.6,4.3-2.6,6.9v81.9c0,2.6,0.9,5.2,2.6,6.9c1.7,1.7,4.3,2.6,6.9,2.6h18.1c2.6,0,5.2-0.9,6.9-2.6   C295.2,2.6,296.1,0,296.1-2.6z M515-2.6v-81.9c0-2.6-0.9-5.2-2.6-6.9c-1.7-1.7-4.3-2.6-6.9-2.6h-18.1c-2.6,0-5.2,0.9-6.9,2.6   c-1.7,1.7-2.6,4.3-2.6,6.9v81.9c0,2.6,0.9,5.2,2.6,6.9s4.3,2.6,6.9,2.6h18.1c2.6,0,5.2-0.9,6.9-2.6C514.1,2.6,515,0,515-2.6z    M624.5-20.7v364.6c0,9.5-3.4,18.1-11.2,25.9S597.7,381,587.4,381H186.6c-9.5,0-18.1-3.4-25.9-11.2c-6.9-6.9-11.2-15.5-11.2-25.9   V-20.7c0-9.5,3.4-18.1,11.2-25.9c6.9-6.9,15.5-11.2,25.9-11.2h37.1v-27.5c0-12.9,4.3-23.3,13.8-31.9c8.6-8.6,19.8-13.8,31.8-13.8   h18.1c12.9,0,23.3,4.3,31.9,13.8c8.6,8.6,13.8,19.8,13.8,31.9v27.6h109.5v-27.6c0-12.9,4.3-23.3,13.8-31.9   c8.6-8.6,19.8-13.8,31.9-13.8h18.1c12.9,0,23.3,4.3,31.9,13.8c8.6,8.6,13.8,19.8,13.8,31.9v27.6h36.2c9.5,0,18.1,3.4,25.9,11.2   C621-39.6,624.5-31,624.5-20.7z">
        </path>
      </g>
    </svg>
  </button>
</div>
`;

exports[`Props/min Value Is Min test 1`] = `
<div class="dateInput"
     data-testid="field_name-DateInput"
>
  <input aria-label="Date format: dd/mm/yyyy"
         class="field"
         data-testid="field_name"
         name="field_name"
         placeholder="dd/mm/yyyy"
         type="text"
         value="25/10/2000"
  >
  <button aria-label="Open calendar date picker"
          class="openCalendarButton"
          data-testid="field_name-OpenCalendarButton"
          type="button"
  >
    <svg class="iconCalendar"
         data-testid="field_name-Icon"
         xmlns="http://www.w3.org/2000/svg"
         version="1.1"
         x="0px"
         y="0px"
         viewbox="131 -131 512 512"
         xml:space="preserve"
    >
      <g>
        <path d="M186.6,343.9h400.8V51.7H186.6V343.9z M296.1-2.6v-81.9c0-2.6-0.9-5.2-2.6-6.9s-4.3-2.6-6.9-2.6h-18.1   c-2.6,0-5.2,0.9-6.9,2.6c-1.7,1.7-2.6,4.3-2.6,6.9v81.9c0,2.6,0.9,5.2,2.6,6.9c1.7,1.7,4.3,2.6,6.9,2.6h18.1c2.6,0,5.2-0.9,6.9-2.6   C295.2,2.6,296.1,0,296.1-2.6z M515-2.6v-81.9c0-2.6-0.9-5.2-2.6-6.9c-1.7-1.7-4.3-2.6-6.9-2.6h-18.1c-2.6,0-5.2,0.9-6.9,2.6   c-1.7,1.7-2.6,4.3-2.6,6.9v81.9c0,2.6,0.9,5.2,2.6,6.9s4.3,2.6,6.9,2.6h18.1c2.6,0,5.2-0.9,6.9-2.6C514.1,2.6,515,0,515-2.6z    M624.5-20.7v364.6c0,9.5-3.4,18.1-11.2,25.9S597.7,381,587.4,381H186.6c-9.5,0-18.1-3.4-25.9-11.2c-6.9-6.9-11.2-15.5-11.2-25.9   V-20.7c0-9.5,3.4-18.1,11.2-25.9c6.9-6.9,15.5-11.2,25.9-11.2h37.1v-27.5c0-12.9,4.3-23.3,13.8-31.9c8.6-8.6,19.8-13.8,31.8-13.8   h18.1c12.9,0,23.3,4.3,31.9,13.8c8.6,8.6,13.8,19.8,13.8,31.9v27.6h109.5v-27.6c0-12.9,4.3-23.3,13.8-31.9   c8.6-8.6,19.8-13.8,31.9-13.8h18.1c12.9,0,23.3,4.3,31.9,13.8c8.6,8.6,13.8,19.8,13.8,31.9v27.6h36.2c9.5,0,18.1,3.4,25.9,11.2   C621-39.6,624.5-31,624.5-20.7z">
        </path>
      </g>
    </svg>
  </button>
  <dialog class="calendar"
          data-testid="field_name-Calendar"
          open
  >
    <svg class="calendarArrow"
         data-testid="field_name-CalendarArrow"
         viewbox="0 0 20 9"
         xmlns="http://www.w3.org/2000/svg"
         fill="currentcolor"
    >
      <polyline class
                points="0,10 10,0 20,10"
                fill="none"
                stroke-width="1"
      >
      </polyline>
    </svg>
    <div class="calendarTabs"
         data-testid="field_name-CalendarTabs"
         role="tablist"
    >
      <button data-testid="field_name-Tab-Day"
              id="field_name-Tab-Day"
              role="tab"
              type="button"
      >
        <span>
          day
        </span>
      </button>
      <button data-testid="field_name-Tab-Month"
              id="field_name-Tab-Month"
              role="tab"
              type="button"
      >
        <span>
          month
        </span>
      </button>
      <button data-testid="field_name-Tab-Year"
              id="field_name-Tab-Year"
              role="tab"
              type="button"
              aria-selected="true"
              disabled
      >
        <span>
          year
        </span>
      </button>
    </div>
    <div aria-labelledby="field_name-Tab-Year"
         class="view"
         data-testid="field_name-View"
         role="tabpanel"
    >
      <div class="viewHead"
           data-testid="field_name-ViewHead"
      >
        <div class="dateRange Year">
          <button data-testid="field_name-Calendar-Year-ButtonPrevious"
                  aria-hidden="true"
                  class="arrowButton previous"
                  disabled
                  type="button"
          >
            <span>
              View year options in 1970 - 1989
            </span>
          </button>
          <span data-testid="field_name-Calendar-Year-Range"
                class="dateRangeText"
          >
            1990 - 2009
          </span>
          <button data-testid="field_name-Calendar-Year-ButtonNext"
                  class="arrowButton next"
                  type="button"
          >
            <span>
              View year options in 2010 - 2029
            </span>
          </button>
        </div>
      </div>
      <div class="viewBody Year"
           data-testid="field_name-ViewBody"
      >
        <button aria-label="1990"
                class="dateOption Year"
                data-testid="field_name-Calendar-Year-1990"
                disabled
                type="button"
        >
          1990
        </button>
        <button aria-label="1991"
                class="dateOption Year"
                data-testid="field_name-Calendar-Year-1991"
                disabled
                type="button"
        >
          1991
        </button>
        <button aria-label="1992"
                class="dateOption Year"
                data-testid="field_name-Calendar-Year-1992"
                disabled
                type="button"
        >
          1992
        </button>
        <button aria-label="1993"
                class="dateOption Year"
                data-testid="field_name-Calendar-Year-1993"
                disabled
                type="button"
        >
          1993
        </button>
        <button aria-label="1994"
                class="dateOption Year"
                data-testid="field_name-Calendar-Year-1994"
                disabled
                type="button"
        >
          1994
        </button>
        <button aria-label="1995"
                class="dateOption Year"
                data-testid="field_name-Calendar-Year-1995"
                disabled
                type="button"
        >
          1995
        </button>
        <button aria-label="1996"
                class="dateOption Year"
                data-testid="field_name-Calendar-Year-1996"
                disabled
                type="button"
        >
          1996
        </button>
        <button aria-label="1997"
                class="dateOption Year"
                data-testid="field_name-Calendar-Year-1997"
                disabled
                type="button"
        >
          1997
        </button>
        <button aria-label="1998"
                class="dateOption Year"
                data-testid="field_name-Calendar-Year-1998"
                disabled
                type="button"
        >
          1998
        </button>
        <button aria-label="1999"
                class="dateOption Year"
                data-testid="field_name-Calendar-Year-1999"
                disabled
                type="button"
        >
          1999
        </button>
        <button aria-label="Selected 2000"
                class="dateOption Year selected"
                data-testid="field_name-Calendar-Year-2000"
                type="button"
        >
          2000
        </button>
        <button aria-label="2001"
                class="dateOption Year"
                data-testid="field_name-Calendar-Year-2001"
                type="button"
        >
          2001
        </button>
        <button aria-label="2002"
                class="dateOption Year"
                data-testid="field_name-Calendar-Year-2002"
                type="button"
        >
          2002
        </button>
        <button aria-label="2003"
                class="dateOption Year"
                data-testid="field_name-Calendar-Year-2003"
                type="button"
        >
          2003
        </button>
        <button aria-label="2004"
                class="dateOption Year"
                data-testid="field_name-Calendar-Year-2004"
                type="button"
        >
          2004
        </button>
        <button aria-label="2005"
                class="dateOption Year"
                data-testid="field_name-Calendar-Year-2005"
                type="button"
        >
          2005
        </button>
        <button aria-label="2006"
                class="dateOption Year"
                data-testid="field_name-Calendar-Year-2006"
                type="button"
        >
          2006
        </button>
        <button aria-label="2007"
                class="dateOption Year"
                data-testid="field_name-Calendar-Year-2007"
                type="button"
        >
          2007
        </button>
        <button aria-label="2008"
                class="dateOption Year"
                data-testid="field_name-Calendar-Year-2008"
                type="button"
        >
          2008
        </button>
        <button aria-label="2009"
                class="dateOption Year"
                data-testid="field_name-Calendar-Year-2009"
                type="button"
        >
          2009
        </button>
      </div>
    </div>
  </dialog>
</div>
`;
